@@ -1,3 +1,9 @@
+2004-02-04  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
+	* gst/sine/gstsinesrc.c: (gst_sinesrc_class_init),
+	(gst_sinesrc_dispose):
+	  fix memleak by properly disposing sinesrc
+
 2004-02-04  Julien MOUTTE  <julien@moutte.net>
 
 	* gst-libs/gst/xoverlay/xoverlay.c: (gst_x_overlay_expose):
